--- a/Aier360/Controllers/我/Mine.storyboard
+++ b/Aier360/Controllers/我/Mine.storyboard
@@ -251,6 +251,7 @@
                         <outlet property="tableView" destination="gFr-Tn-peh" id="BaH-bh-THK"/>
                         <outlet property="viersionLabel" destination="daR-Tc-hvD" id="9MA-tO-ei9"/>
                         <segue destination="lBv-mD-Lwi" kind="show" identifier="features" id="95x-ZI-WeI"/>
+                        <segue destination="69R-ce-PN9" kind="show" identifier="help" id="1DK-Kc-PgE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XGa-Ze-Bao" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -566,6 +567,78 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yTy-bA-LeK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1835" y="363"/>
+        </scene>
+        <!--Help View Controller-->
+        <scene sceneID="6JK-X6-9Fl">
+            <objects>
+                <viewController storyboardIdentifier="ZXHelpViewController" id="69R-ce-PN9" customClass="ZXHelpViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="98e-wE-bMH"/>
+                        <viewControllerLayoutGuide type="bottom" id="blv-kO-cWq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="zxp-64-jle">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fdH-KJ-IaV">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="delegate" destination="69R-ce-PN9" id="3XD-xi-pDL"/>
+                                </connections>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="fdH-KJ-IaV" secondAttribute="trailing" constant="-16" id="Xnu-xf-hiN"/>
+                            <constraint firstItem="blv-kO-cWq" firstAttribute="top" secondItem="fdH-KJ-IaV" secondAttribute="bottom" id="roP-K9-mqp"/>
+                            <constraint firstItem="fdH-KJ-IaV" firstAttribute="top" secondItem="zxp-64-jle" secondAttribute="topMargin" id="s0O-aj-gWg"/>
+                            <constraint firstItem="fdH-KJ-IaV" firstAttribute="leading" secondItem="zxp-64-jle" secondAttribute="leadingMargin" constant="-16" id="ypU-uf-Jtz"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="fdH-KJ-IaV" id="EzN-Jl-FP7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tec-bt-jUM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1785" y="1135"/>
+        </scene>
+        <!--Help Detail View Controller-->
+        <scene sceneID="nJI-16-aW4">
+            <objects>
+                <viewController storyboardIdentifier="ZXHelpDetailViewController" id="Jks-4p-UTZ" customClass="ZXHelpDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="07r-YQ-u9Z"/>
+                        <viewControllerLayoutGuide type="bottom" id="KkW-QD-Hrs"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="RKE-3s-bJA">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="arW-C6-zM6">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Jks-4p-UTZ" id="6Gu-lr-ili"/>
+                                </connections>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="KkW-QD-Hrs" firstAttribute="top" secondItem="arW-C6-zM6" secondAttribute="bottom" id="AHQ-GE-PO5"/>
+                            <constraint firstItem="arW-C6-zM6" firstAttribute="leading" secondItem="RKE-3s-bJA" secondAttribute="leadingMargin" constant="-16" id="BQX-5J-nCk"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="arW-C6-zM6" secondAttribute="trailing" constant="-16" id="MtB-Gg-nB0"/>
+                            <constraint firstItem="arW-C6-zM6" firstAttribute="top" secondItem="RKE-3s-bJA" secondAttribute="topMargin" id="hox-7A-YPo"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="arW-C6-zM6" id="LYt-u3-t8y"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FDP-Ia-Pk0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2408" y="1135"/>
         </scene>
         <!--My Dynamic View Controller-->
         <scene sceneID="DEL-37-RwI">
