--- a/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
+++ b/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
@@ -312,31 +312,13 @@
                                                         <action selector="deleteAction:" destination="PG4-E2-dxQ" eventType="touchUpInside" id="HUT-W2-SWX"/>
                                                     </connections>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2SA-hU-LhA">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2SA-hU-LhA">
                                                     <rect key="frame" x="505" y="20" width="42" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="nsV-6Z-dOO"/>
                                                         <constraint firstAttribute="width" priority="200" constant="42" id="roN-tz-9GP"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <color key="textColor" red="0.59999999999999998" green="0.76078431369999999" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xNT-CV-tG7" customClass="MLEmojiLabel">
-                                                    <rect key="frame" x="15" y="60" width="570" height="65"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                    <connections>
-                                                        <outlet property="delegate" destination="t3j-gY-KPJ" id="LIf-I2-X47"/>
-                                                    </connections>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="更多留言" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7pb-Sl-3Nr">
-                                                    <rect key="frame" x="15" y="132" width="570" height="21"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="8cQ-FM-4hh"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.59999999999999998" green="0.76078431369999999" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -347,40 +329,24 @@
                                                         <outlet property="delegate" destination="mbp-1d-EcX" id="lah-t8-QLP"/>
                                                     </connections>
                                                 </view>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Wj9-ck-aah">
-                                                    <rect key="frame" x="8" y="8" width="300" height="81"/>
-                                                </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="bYD-0W-kdI" firstAttribute="leading" secondItem="mbp-1d-EcX" secondAttribute="leadingMargin" constant="7" id="0az-Jm-Tfq"/>
-                                                <constraint firstItem="xNT-CV-tG7" firstAttribute="top" secondItem="A5X-f3-FXe" secondAttribute="bottom" constant="8" id="19J-94-MKH"/>
                                                 <constraint firstItem="F2g-AP-4aH" firstAttribute="leading" secondItem="2SA-hU-LhA" secondAttribute="trailing" constant="8" id="1og-ny-4iL"/>
                                                 <constraint firstItem="2SA-hU-LhA" firstAttribute="top" secondItem="mbp-1d-EcX" secondAttribute="topMargin" constant="12" id="4Sn-Qa-Q9s"/>
                                                 <constraint firstItem="A5X-f3-FXe" firstAttribute="top" secondItem="mbp-1d-EcX" secondAttribute="topMargin" id="4h0-q0-RvL"/>
                                                 <constraint firstItem="bYD-0W-kdI" firstAttribute="top" secondItem="A5X-f3-FXe" secondAttribute="bottom" constant="9" id="BwZ-lF-I0g"/>
-                                                <constraint firstItem="7pb-Sl-3Nr" firstAttribute="top" secondItem="bYD-0W-kdI" secondAttribute="bottom" constant="8" id="EGk-JR-PTk"/>
                                                 <constraint firstItem="bYD-0W-kdI" firstAttribute="bottom" secondItem="mbp-1d-EcX" secondAttribute="bottomMargin" id="I7T-CU-bRX"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="7pb-Sl-3Nr" secondAttribute="trailing" constant="7" id="JcQ-jm-h2S"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="F2g-AP-4aH" secondAttribute="trailing" constant="7" id="LAU-9s-rzo"/>
                                                 <constraint firstItem="MSh-Ec-h2g" firstAttribute="leading" secondItem="A5X-f3-FXe" secondAttribute="trailing" constant="8" id="Mrb-NQ-aY4"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="xNT-CV-tG7" secondAttribute="trailing" constant="7" id="P0X-8U-6qy"/>
                                                 <constraint firstItem="A5X-f3-FXe" firstAttribute="leading" secondItem="mbp-1d-EcX" secondAttribute="leadingMargin" constant="7" id="PXb-oP-8EQ"/>
                                                 <constraint firstItem="2SA-hU-LhA" firstAttribute="leading" secondItem="MSh-Ec-h2g" secondAttribute="trailing" constant="8" id="Sjw-jY-hRW"/>
                                                 <constraint firstItem="MSh-Ec-h2g" firstAttribute="top" secondItem="mbp-1d-EcX" secondAttribute="topMargin" constant="12" id="TYh-cp-GMb"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="7pb-Sl-3Nr" secondAttribute="bottom" constant="-1" id="Xub-sO-4mj"/>
                                                 <constraint firstItem="F2g-AP-4aH" firstAttribute="top" secondItem="mbp-1d-EcX" secondAttribute="topMargin" constant="8" id="dCL-c5-CcK"/>
                                                 <constraint firstItem="2SA-hU-LhA" firstAttribute="top" secondItem="mbp-1d-EcX" secondAttribute="topMargin" constant="12" id="fwF-Fl-txZ"/>
-                                                <constraint firstItem="7pb-Sl-3Nr" firstAttribute="leading" secondItem="mbp-1d-EcX" secondAttribute="leadingMargin" constant="7" id="nqv-IF-9Wb"/>
-                                                <constraint firstItem="7pb-Sl-3Nr" firstAttribute="top" secondItem="xNT-CV-tG7" secondAttribute="bottom" constant="7" id="reU-4D-zib"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="bYD-0W-kdI" secondAttribute="trailing" constant="7" id="tCi-Hz-7zD"/>
-                                                <constraint firstItem="xNT-CV-tG7" firstAttribute="leading" secondItem="mbp-1d-EcX" secondAttribute="leadingMargin" constant="7" id="z69-4A-HRm"/>
                                             </constraints>
                                             <variation key="default">
-                                                <mask key="subviews">
-                                                    <exclude reference="xNT-CV-tG7"/>
-                                                    <exclude reference="7pb-Sl-3Nr"/>
-                                                    <exclude reference="Wj9-ck-aah"/>
-                                                </mask>
                                                 <mask key="constraints">
                                                     <exclude reference="fwF-Fl-txZ"/>
                                                 </mask>
@@ -593,39 +559,14 @@
                                     <outlet property="delegate" destination="PG4-E2-dxQ" id="RWn-ef-wcZ"/>
                                 </connections>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="你还没有加入学校，暂无访问权限哦" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8BJ-fL-n9R">
-                                <rect key="frame" x="16" y="281" width="568" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="JOL-z3-89V"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.51764705879999995" green="0.51764705879999995" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="JOL-z3-89V"/>
-                                    </mask>
-                                </variation>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="8BJ-fL-n9R" firstAttribute="trailing" secondItem="uN3-JF-V3H" secondAttribute="trailingMargin" id="7iH-Ed-dlB"/>
                             <constraint firstAttribute="trailingMargin" secondItem="128-5K-l8u" secondAttribute="trailing" constant="-16" id="99P-hI-ezs"/>
                             <constraint firstItem="128-5K-l8u" firstAttribute="leading" secondItem="uN3-JF-V3H" secondAttribute="leadingMargin" constant="-16" id="AgN-DS-2dY"/>
-                            <constraint firstItem="8BJ-fL-n9R" firstAttribute="leading" secondItem="uN3-JF-V3H" secondAttribute="leadingMargin" id="Isb-EK-Nuv"/>
                             <constraint firstItem="128-5K-l8u" firstAttribute="top" secondItem="uN3-JF-V3H" secondAttribute="topMargin" id="QR2-XP-j0V"/>
                             <constraint firstItem="5UF-Ni-1O0" firstAttribute="top" secondItem="128-5K-l8u" secondAttribute="bottom" id="ggZ-ay-N40"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="8BJ-fL-n9R"/>
-                            </mask>
-                            <mask key="constraints">
-                                <exclude reference="7iH-Ed-dlB"/>
-                                <exclude reference="Isb-EK-Nuv"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
                         <outlet property="addressLabel" destination="IfQ-BD-hSB" id="HGa-CQ-J4b"/>
@@ -2063,7 +2004,7 @@
                                                         <action selector="deleteAction:" destination="QZO-Dv-hZs" eventType="touchUpInside" id="H4F-Bs-C4V"/>
                                                     </connections>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tG5-0E-lhU">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tG5-0E-lhU">
                                                     <rect key="frame" x="505" y="20" width="42" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="Swh-9k-0AL"/>
