--- a/Aier360/Controllers/校园/班级动态/Class.storyboard
+++ b/Aier360/Controllers/校园/班级动态/Class.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -151,31 +150,13 @@
                                                         <action selector="deleteAction:" destination="Gwh-dk-Xi1" eventType="touchUpInside" id="BU5-ND-iSV"/>
                                                     </connections>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nb0-DE-ks3">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nb0-DE-ks3">
                                                     <rect key="frame" x="505" y="20" width="42" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="3xY-in-BwK"/>
                                                         <constraint firstAttribute="width" priority="200" constant="42" id="mw5-mQ-ed8"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <color key="textColor" red="0.59999999999999998" green="0.76078431369999999" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yuv-lC-uMN" customClass="MLEmojiLabel">
-                                                    <rect key="frame" x="15" y="60" width="570" height="65"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                    <connections>
-                                                        <outlet property="delegate" destination="lcr-Pi-myc" id="ojf-3Q-Okv"/>
-                                                    </connections>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="更多留言" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R6z-Qx-18w">
-                                                    <rect key="frame" x="15" y="132" width="570" height="21"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="Wkn-h0-eIV"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.59999999999999998" green="0.76078431369999999" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -186,40 +167,24 @@
                                                         <outlet property="delegate" destination="Ltp-Wl-QyQ" id="YaJ-xt-9K7"/>
                                                     </connections>
                                                 </view>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vps-QR-oAm">
-                                                    <rect key="frame" x="8" y="8" width="300" height="81"/>
-                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="R6z-Qx-18w" secondAttribute="bottom" constant="-1" id="3IE-ob-wKr"/>
                                                 <constraint firstItem="inV-YA-VaB" firstAttribute="top" secondItem="Ltp-Wl-QyQ" secondAttribute="topMargin" constant="8" id="4KX-Zs-yNx"/>
                                                 <constraint firstItem="KZT-93-wf0" firstAttribute="top" secondItem="9ig-yc-a6n" secondAttribute="bottom" constant="9" id="5A5-k3-qMa"/>
-                                                <constraint firstItem="yuv-lC-uMN" firstAttribute="leading" secondItem="Ltp-Wl-QyQ" secondAttribute="leadingMargin" constant="7" id="7nl-2p-TTc"/>
                                                 <constraint firstItem="9ig-yc-a6n" firstAttribute="leading" secondItem="Ltp-Wl-QyQ" secondAttribute="leadingMargin" constant="7" id="Ddx-Hr-NzL"/>
-                                                <constraint firstItem="R6z-Qx-18w" firstAttribute="top" secondItem="yuv-lC-uMN" secondAttribute="bottom" constant="7" id="Dyh-o4-nEv"/>
-                                                <constraint firstItem="R6z-Qx-18w" firstAttribute="top" secondItem="KZT-93-wf0" secondAttribute="bottom" constant="8" id="Erd-uh-fIE"/>
-                                                <constraint firstItem="yuv-lC-uMN" firstAttribute="top" secondItem="9ig-yc-a6n" secondAttribute="bottom" constant="8" id="Frj-KL-aKM"/>
                                                 <constraint firstItem="KZT-93-wf0" firstAttribute="bottom" secondItem="Ltp-Wl-QyQ" secondAttribute="bottomMargin" id="Q35-Qh-4YN"/>
                                                 <constraint firstItem="9ig-yc-a6n" firstAttribute="top" secondItem="Ltp-Wl-QyQ" secondAttribute="topMargin" id="Rod-t4-weP"/>
                                                 <constraint firstItem="Nb0-DE-ks3" firstAttribute="top" secondItem="Ltp-Wl-QyQ" secondAttribute="topMargin" constant="12" id="VYo-x7-nS3"/>
                                                 <constraint firstItem="aS2-ll-Cl6" firstAttribute="top" secondItem="Ltp-Wl-QyQ" secondAttribute="topMargin" constant="12" id="XgX-7T-WqD"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="yuv-lC-uMN" secondAttribute="trailing" constant="7" id="hor-cn-zYw"/>
                                                 <constraint firstItem="inV-YA-VaB" firstAttribute="leading" secondItem="Nb0-DE-ks3" secondAttribute="trailing" constant="8" id="ihW-E6-Qvw"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="inV-YA-VaB" secondAttribute="trailing" constant="7" id="lTb-Ig-Ovk"/>
                                                 <constraint firstItem="Nb0-DE-ks3" firstAttribute="leading" secondItem="aS2-ll-Cl6" secondAttribute="trailing" constant="8" id="njq-t3-btj"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="KZT-93-wf0" secondAttribute="trailing" constant="7" id="oCB-Sc-2ex"/>
-                                                <constraint firstItem="R6z-Qx-18w" firstAttribute="leading" secondItem="Ltp-Wl-QyQ" secondAttribute="leadingMargin" constant="7" id="p3q-m7-AMq"/>
                                                 <constraint firstItem="aS2-ll-Cl6" firstAttribute="leading" secondItem="9ig-yc-a6n" secondAttribute="trailing" constant="8" id="te9-Sd-l9J"/>
                                                 <constraint firstItem="Nb0-DE-ks3" firstAttribute="top" secondItem="Ltp-Wl-QyQ" secondAttribute="topMargin" constant="12" id="xOQ-nH-MNH"/>
                                                 <constraint firstItem="KZT-93-wf0" firstAttribute="leading" secondItem="Ltp-Wl-QyQ" secondAttribute="leadingMargin" constant="7" id="zW3-28-0Iq"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="R6z-Qx-18w" secondAttribute="trailing" constant="7" id="zyS-IE-bIw"/>
                                             </constraints>
                                             <variation key="default">
-                                                <mask key="subviews">
-                                                    <exclude reference="yuv-lC-uMN"/>
-                                                    <exclude reference="R6z-Qx-18w"/>
-                                                    <exclude reference="Vps-QR-oAm"/>
-                                                </mask>
                                                 <mask key="constraints">
                                                     <exclude reference="VYo-x7-nS3"/>
                                                 </mask>
@@ -432,20 +397,6 @@
                                     <outlet property="delegate" destination="Gwh-dk-Xi1" id="qqd-YD-OHD"/>
                                 </connections>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="你还没有加入学校，暂无访问权限哦" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uKU-vI-0Ip">
-                                <rect key="frame" x="16" y="281" width="568" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="zDB-lS-9pW"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.51764705879999995" green="0.51764705879999995" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="zDB-lS-9pW"/>
-                                    </mask>
-                                </variation>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -453,18 +404,7 @@
                             <constraint firstItem="lnZ-Xa-XqJ" firstAttribute="leading" secondItem="Cxy-SL-lVq" secondAttribute="leadingMargin" constant="-16" id="KHN-Wd-JbO"/>
                             <constraint firstItem="lnZ-Xa-XqJ" firstAttribute="top" secondItem="Cxy-SL-lVq" secondAttribute="topMargin" id="ZCB-Cg-NIz"/>
                             <constraint firstAttribute="trailingMargin" secondItem="lnZ-Xa-XqJ" secondAttribute="trailing" constant="-16" id="eP8-DK-ruK"/>
-                            <constraint firstItem="uKU-vI-0Ip" firstAttribute="leading" secondItem="Cxy-SL-lVq" secondAttribute="leadingMargin" id="iZs-GG-qpM"/>
-                            <constraint firstItem="uKU-vI-0Ip" firstAttribute="trailing" secondItem="Cxy-SL-lVq" secondAttribute="trailingMargin" id="y9u-So-BK4"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="uKU-vI-0Ip"/>
-                            </mask>
-                            <mask key="constraints">
-                                <exclude reference="y9u-So-BK4"/>
-                                <exclude reference="iZs-GG-qpM"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="lnZ-Xa-XqJ" id="vH9-27-vwb"/>
