将一些无用的property放到.m里

--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -550,6 +550,7 @@
                             <constraint firstItem="2w2-aG-a8r" firstAttribute="top" secondItem="Egm-UQ-SaA" secondAttribute="topMargin" id="cR7-JW-2dF"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="3Ra-vq-XFd"/>
                     <connections>
                         <outlet property="readButton" destination="HxU-Ii-0A0" id="xYV-cj-6cf"/>
                         <outlet property="senderLabel" destination="HlH-je-3wL" id="7TR-OG-0kt"/>
